--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -4,31 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_navigation"
     app:startDestination="@id/splashScreen">
+
     <action
         android:id="@+id/action_splashScreen_to_homeScreen"
         app:destination="@id/homeScreen"
         app:popUpTo="@id/app_navigation"
         app:popUpToInclusive="true" />
+
+    <action
+        android:id="@+id/action_splashScreen_to_loginScreen"
+        app:destination="@id/loginScreen"
+        app:popUpTo="@id/app_navigation"
+        app:popUpToInclusive="true" />
+
     <fragment
         android:id="@+id/splashScreen"
         android:name="uz.bahrom.myapps.presentation.screens.splash.SplashScreen"
         android:label="SplashScreen"
         tools:layout="@layout/screen_splash">
 
-        <action
-            android:id="@+id/action_splashScreen_to_loginScreen"
-            app:destination="@id/loginScreen"
-            app:popUpTo="@id/app_navigation"
-            app:popUpToInclusive="true" />
     </fragment>
+
     <fragment
         android:id="@+id/homeScreen"
         android:name="uz.bahrom.myapps.presentation.screens.main.home.HomeScreen"
         android:label="HomeScreen"
-        tools:layout="@layout/screen_home"/>
+        tools:layout="@layout/screen_home">
+
+        <action
+            android:id="@+id/action_homeScreen_to_detailScreen"
+            app:destination="@id/detailScreen"
+            app:popUpTo="@id/homeScreen"
+            app:popUpToInclusive="true" />
+    </fragment>
+
     <fragment
         android:id="@+id/loginScreen"
         android:name="uz.bahrom.myapps.presentation.screens.login.login.LoginScreen"
         android:label="LoginScreen"
-        tools:layout="@layout/screen_login"/>
+        tools:layout="@layout/screen_login">
+
+        <action
+            android:id="@+id/action_loginScreen_to_registerScreen"
+            app:destination="@id/registerScreen"
+            app:popUpTo="@id/loginScreen"
+            app:popUpToInclusive="true" />
+
+    </fragment>
+
+    <action
+        android:id="@+id/action_registerScreen_to_homeScreen"
+        app:destination="@id/homeScreen"
+        app:popUpTo="@id/app_navigation"
+        app:popUpToInclusive="true" />
+
+    <fragment
+        android:id="@+id/registerScreen"
+        android:name="uz.bahrom.myapps.presentation.screens.login.register.RegisterScreen"
+        android:label="RegisterScreen"
+        tools:layout="@layout/screen_register">
+
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailScreen"
+        android:name="uz.bahrom.myapps.presentation.screens.main.detail.DetailScreen"
+        android:label="DetailScreen"
+        tools:layout="@layout/screen_detail" />
 </navigation>
